hopefully fixed list element alignment in nav menu

--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@
 }
 .main-nav li {
     text-align: center;
-    margin: 2px;
+    margin-top: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
     margin-left: 0px;
     padding-left: 0px;
     list-style-type: none;
